# nextgisqgis

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  minibuild.md
doc/: CMakeLists.txt
headless_render/: CMakeLists.txt  app.cpp  example_headlessrender.py  headless_render.cpp  lib.cpp  lib.h  pylib.cpp  version.h
headless_render/src/: CMakeLists.txt
headless_render/src/app/: CMakeLists.txt
headless_render/src/core/: CMakeLists.txt  qgscoordinatetransform.cpp  qgscoordinatetransform_p.cpp  qgslogger.h  qgsmaprenderercustompainterjob.cpp  qgsmaprendererjob.cpp  qgsmapsettings.cpp  qgsmaptopixel.cpp  qgsvectorlayerrenderer.cpp
images/: CMakeLists.txt  images.qrc
images/icons/: CMakeLists.txt  other.icns  qgis_icon.hqx  qgis_icon.icns  qgs.icns  qml.icns  shp.icns  tiff.icns
images/svg/: CMakeLists.txt
python/: CMakeLists.txt
python/3d/: pyproject.toml.in
python/PyQt/: CMakeLists.txt
python/analysis/: analysis.sip  analysis_auto.sip
python/console/: CMakeLists.txt
python/core/: __init__.py.in  conversions.sip  core.sip  core.sip.in  core_auto.sip  qgsfeature.sip  qgsvectorlayerfeatureiterator.sip
python/core/auto_additions/: qgis.py  qgsarcgisrestutils.py  qgsdxfexport.py  qgsgeonoderequest.py  qgsmapboxglstyleconverter.py  qgsprocessingutils.py
python/core/auto_generated/: qgsapplication.sip.in  qgsmaplayer.sip.in
python/gui/: gui_auto.sip
python/gui/auto_generated/: qgisinterface.sip.in  qgsfilewidget.sip.in  qgsgui.sip.in
python/gui/editorwidgets/: qgsdatetimeedit.sip
python/plugins/: CMakeLists.txt
python/plugins/GdalTools/: CMakeLists.txt  GdalTools.py
python/plugins/MetaSearch/: CMakeLists.txt
python/plugins/db_manager/: CMakeLists.txt
python/plugins/fTools/: CMakeLists.txt
python/plugins/processing/: CMakeLists.txt  ProcessingPlugin.py
python/processing/: CMakeLists.txt
python/pyplugin_installer/: CMakeLists.txt  installer_data.py
python/qsci_apis/: CMakeLists.txt
python/testing/: CMakeLists.txt
resources/: CMakeLists.txt  ngqgis.desktop.in  srs.db  srs6.db
resources/composer_templates/: A1-Horizontal.qpt  A1-Vertical.qpt  A2-Horizontal.qpt  A2-Vertical.qpt  A3-Horizontal.qpt  A3-Vertical.qpt  A4-Vertical(simple).qpt  A4-Vertical.qpt  А1 Вертикальный.qpt  А1-Horizontal.qpt  А3 Горизонтальный.qpt  А3-Vertical.qpt  А4 Вертикальный.qpt  Простой А4 Горизонтальный.qpt
resources/fonts/: readme.md
resources/metadata-ISO/: language_codes_ISO_639.csv
src/: CMakeLists.txt
src/3d/: CMakeLists.txt  qgspointcloudlayer3drenderer.cpp
src/analysis/: CMakeLists.txt  flex_qgsmeshcalclexer.cpp  flex_qgsrastercalclexer.cpp  qgsmeshcalcparser.cpp  qgsmeshcalcparser.hpp  qgsrastercalcparser.cpp  qgsrastercalcparser.hpp
src/analysis/processing/: qgsnativealgorithms.cpp
src/app/: CMakeLists.txt  main.cpp  mainwin.cpp  ngcustomization.cpp  ngcustomization.h  ngqgsapplication.cpp  ngqgsapplication.h  ngsaboutdialog.cpp  ngsaboutdialog.h  ngupdater.cpp  ngupdater.h  qgis_win32.rc  qgisapp.cpp  qgisapp.h  qgisappinterface.cpp  qgisappinterface.h  qgsabout.cpp  qgsapplayertreeviewmenuprovider.cpp  qgsclipboard.cpp  qgsclipboard.h  qgscustomization.cpp  qgsfieldcalculator.cpp  qgsidentifyresultsdialog.cpp  qgsidentifyresultsdialog.h  qgslabelinggui.cpp  qgslayerstylingwidget.cpp  qgslayertreeviewindicatorprovider.cpp  qgsmaptoolselectutils.cpp  qgsoptions.cpp  qgsoptions.h  qgsosmdownloaddialog.h  qgsosmexportdialog.h  qgsosmimportdialog.h  qgspluginregistry.cpp  qgsprojectlistitemdelegate.cpp  qgstipgui.cpp  qgswelcomepage.cpp  qgswelcomepage.h  ui_defaults.h
src/app/browser/: qgsinbuiltdataitemproviders.cpp
src/app/composer/: qgscomposerpicturewidget.cpp
src/app/layers/: qgsapplayerhandling.cpp
src/app/layout/: qgslayoutdesignerdialog.cpp
src/app/ogr/: qgsvectorlayersaveasdialog.cpp
src/app/options/: ngauthoptions.cpp  ngauthoptions.h  qgsfontoptions.cpp  qgsoptions.cpp  qgsoptions.h  qgsuserprofileselectiondialog.h
src/app/pluginmanager/: qgspluginmanager.cpp
src/auth/: CMakeLists.txt
src/core/: CMakeLists.txt  flex_qgsexpressionlexer.cpp  flex_qgsmeshcalclexer.cpp  flex_qgssqlstatementlexer.cpp  ngqgsapplication.cpp  ngqgsapplication.h  qgsabstractcontentcache.h  qgsapplication.cpp  qgsapplication.h  qgscoordinatereferencesystem.cpp  qgscoordinatereferencesystem_p.h  qgscplhttpfetchoverrider.h  qgsexpressionparser.cpp  qgsexpressionparser.hpp  qgsfontutils.cpp  qgsjsonutils.cpp  qgsjsonutils.h  qgslayerdefinition.cpp  qgsmaplayerfactory.cpp  qgsmeshcalcparser.cpp  qgsmeshcalcparser.hpp  qgspallabeling.cpp  qgspallabeling.h  qgspostgresstringutils.cpp  qgsrange.h  qgssqlstatementparser.cpp  qgssqlstatementparser.hpp  qgsvectorfilewriter.cpp
src/core/auth/: ngauthmanager.cpp  ngauthmanager.h  qgsauthcertutils.cpp  qgsauthcertutils.h  qgsauthmanager.cpp  qgsauthmanager.h  qgsauthmethod.h
src/core/browser/: qgsfilebaseddataitemprovider.cpp
src/core/elevation/: qgsprofileexporter.cpp
src/core/expression/: qgsexpressioncontextutils.cpp
src/core/fieldformatter/: qgsvaluerelationfieldformatter.cpp
src/core/geometry/: qgsabstractgeometry.cpp  qgsabstractgeometry.h  qgscircularstring.cpp  qgscompoundcurve.cpp  qgscurvepolygon.cpp  (+11 more)
src/crashhandler/: CMakeLists.txt
src/crssync/: CMakeLists.txt
src/gui/: CMakeLists.txt  ngaddons.h  qgisinterface.h  qgsbrowserdockwidget_p.cpp  qgsexpressionbuilderdialog.cpp  qgsexpressionselectiondialog.cpp  qgsgpsinformationwidget.h  qgsgui.cpp  qgsgui.h  qgsmanageconnectionsdialog.cpp  qgsmanageconnectionsdialog.h  qgsmapcanvas.cpp  qgsmaplayerstylemanagerwidget.cpp  qgsmaptoolidentify.cpp  qgsmaptoolidentify.h  qgsnewgeopackagelayerdialog.cpp  qgsproviderguiregistry.cpp  qgsquerybuilder.cpp  qgsqueryresultwidget.cpp  qgssearchquerybuilder.cpp
src/native/: CMakeLists.txt
src/plugins/: CMakeLists.txt
src/providers/: CMakeLists.txt
src/python/: CMakeLists.txt
src/test/: CMakeLists.txt  qgstest.h
src/ui/: CMakeLists.txt  ngauthoptions.ui  ngsaboutdialog.ui  qgisapp.ui  qgslabelingguibase.ui  qgsoptionsbase.ui
translations/: CMakeLists.txt
(+545 files in other folders)
